# qnx-base-app

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: qnx_env.cmake  qnx_toolchain.cmake
src/: main.c
